Ajax 동작 수정 및 new 메뉴 동작 추가

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span>Hacker News</span>
       </div>
       <div class="menu">
-        <span>new</span>
+        <span class="menu-new">new</span>
         |
         <span>past</span>
         |
